--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -23,7 +23,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Build
-        run: go build -v ./...
+        run: go build -o release/ -v ./...
 
       - name: Test
         run: go test -v ./...
